fixed spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ main h2 {
   margin: 30px;
 }
 main h4 {
-  font-size: 45px;
+  font-size: 42px;
   margin-top: 100px;
   font-weight: bold;
   float: left;
@@ -102,4 +102,5 @@ footer {
   color: #bfbdbd;
   padding: 20px 60px;
   font-size: 20px;
+  text-align: center;
 }
